--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo"><img class="logoimg" src="/Img/finallogo.png"> </div>
         <div class="navlist">
             <ul>
-                <li><a class="href" href="index.html">Home</a></li>
+                <li><a class="href" href="index.html">My  Home</a></li>
                 <li><a href="#AboutusSection">About Us</a></li>
                 <li><a class="href" href="scedule.html">Schedule</a></li>
                 <li><a href="#">Contact Us</a></li>
