--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a class="href" href="index.html">Home</a></li>
                 <li><a href="#AboutusSection">About Us</a></li>
                 <li><a class="href" href="scedule.html">Schedule</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
 
         </div>
