--- a/index.html
+++ b/index.html
@@ -77,7 +77,35 @@
         
 
     </div>
-    <div class="footersection"></div>
+    <!-- <div class="footersection">
+        hello
+    </div> -->
+    <section class="footer">
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3>Quick Links</h3>
+                <a class="href" href="index.html"> <i class="fas fa-arrow-right"></i> Home </a>
+                <a class="href" href="scedule.html"> <i class="fas fa-arrow-right"></i> Schedule Meet </a>
+                <a class="href" href="#"> <i class="fas fa-arrow-right"></i>About Us </a>
+                <a class="href" href="contactUs.html"> <i class="fas fa-arrow-right"></i> Contact Us</a>
+            </div>
+
+
+            <div class="box">
+                <h3>Follow Us</h3>
+                <a class="href" href="#"> <i class="fab fa-facebook-f"></i> Facebook </a>
+                <a class="href" href="#"> <i class="fab fa-twitter"></i> Twitter </a>
+                <a class="href" href="#"> <i class="fab fa-instagram"></i> Instagram </a>
+                <a class="href" href="#"> <i class="fab fa-linkedin"></i> Linkedin </a>
+            </div>
+
+        </div>
+
+        <div class="credit">created by <span>GOD</span> | all rights reserved</div>
+
+    </section>
 
 </body>
 
